--- a/context/package.json
+++ b/context/package.json
@@ -9,7 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.6",
+    "styled-components": "^6.1.8",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -36,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "postcss": "^8.4.33",
+    "postcss-loader": "^7.3.4"
   }
 }
